--- a/Liver disease diagnosis.ipynb
+++ b/Liver disease diagnosis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#read the csv into a dataframe\n",
-    "df = pd.read_csv('indian_liver_patient.csv')"
+    "df = pd.read_csv(r'C:\\Users\\SEGUN\\Documents\\projects\\Gamjay\\indian_liver_patient.csv')"
    ]
   },
   {
